syntax = "proto3";

package grpc;

// Specify the Go package where the generated Go code should be placed.
option go_package = "./room";

// The request message containing the player's current coordinates
message RoomRequest {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

// The response message containing the room's details
message RoomResponse {
  string description = 1;
  repeated string items = 2;
  repeated string npcs = 3;
}

// The Room service definition
service RoomService {
  rpc GetRoom(RoomRequest) returns (RoomResponse);
}
