package game

import (
	pb "github.com/mfreeman451/dd-chatgpt-dm/server/pb/game"
)

// RoomService manages rooms in the game.
type RoomService struct {
	// dependencies, like a database connection, go here
}

// NewRoom creates a new room with the given parameters.
func (s *RoomService) NewRoom( /* parameters */ ) (*pb.Room, error) {
	// implementation goes here
	return nil, nil
}

// UpdateRoom updates the state of a room.
func (s *RoomService) UpdateRoom(room *pb.Room) error {
	// implementation goes here
	return nil
}

// DeleteRoom deletes a room.
func (s *RoomService) DeleteRoom(roomID string) error {
	// implementation goes here
	return nil
}

// AddPlayer adds a player to a room.
func (s *RoomService) AddPlayer(roomID string, player *pb.Player) error {
	// implementation goes here
	return nil
}

// RemovePlayer removes a player from a room.
func (s *RoomService) RemovePlayer(roomID string, playerID string) error {
	// implementation goes here
	return nil
}

// GetRoomState retrieves the current state of a room.
func (s *RoomService) GetRoomState(roomID string) (*pb.Room, error) {
	// implementation goes here
	return nil, nil
}
